# freer-effects-demo

./: CHANGELOG.md  flake.nix  freer-effects-demo.cabal
app/: Main.hs
