cabal-version:      3.0
name:               freer-effects-demo
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable freer-effects-demo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:  , base ^>=4.18.1.0
                    , freer-effects
    hs-source-dirs:   app
    default-language: Haskell2010
